created CRUD for User
